load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

cc_binary(
    name = "dmxhue",
    srcs = ["dmxhue.cc"],
    deps = [
        "@com_github_enwi_hueplusplus//:hueplusplus",
        "@com_github_etclabs_sacn//:sacn_cpp",
        "@com_github_google_glog//:glog",
        "@com_github_jupp0r_prometheus_cpp//pull",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_image(
    name = "dmxhue_image",
    binary = ":dmxhue",
)
