load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

cc_binary(
    name = "dmxhue",
    srcs = ["dmxhue.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        #"@glog",
        "@hueplusplus",
        #"@prometheus_cpp//pull",
        "@sacn//:sacn_cpp",
    ],
)

pkg_tar(
    name = "dmxhue_layer",
    srcs = [":dmxhue"],
    package_dir = "/opt/app",
)

oci_image(
    name = "image",
    base = "@debian",
    entrypoint = ["/opt/app/dmxhue"],
    tars = [":dmxhue_layer"],
)

oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["ai-advocate:bazel"],
)
