module(name = "dmxhue")

bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "prometheus-cpp", version = "1.2.4")
bazel_dep(name = "protobuf", version = "29.0-rc1")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "mbedtls", version = "3.6.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12",
    digest = "sha256:1850aee2ff72864350058d83d681c757d45c885986d15fcca7309b9e5c69f39a",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_cc_debian12", "distroless_cc_debian12_linux_amd64")

repos = use_extension("//:repos.bzl", "repos_bzlmod")
use_repo(
    repos,
    "com_github_etclabs_etcpal",
    "com_github_etclabs_sacn",
    "com_github_enwi_hueplusplus",
    "org_kernel_util_linux",
)
